Fixing hero image on mobile

--- a/assets/main.css
+++ b/assets/main.css
@@ -17,7 +17,7 @@ header ul li {display: inline-block; padding: 10px;}
 header ul li a {text-decoration: none; color: #1f343f; font-weight: bold;}
 
 .hero {max-width: 1400px; margin: 0 auto; margin-top: 30px;}
-.hero img {width: 100%;}
+.hero img {width: 100%; }
 .hero h2 {text-align: center; margin: 50px auto; font-size: 2.2em; line-height: 1.5em; max-width: 1200px;}
 
 .content {max-width: 800px; margin: 0 auto 50px; padding: 20px;}
@@ -38,6 +38,7 @@ blockquote {border-left: 3px solid #1f343f; padding-left: 20px; font-size: 0.9em
   .hero h2 {padding: 20px; margin: 0 auto; font-size: 0.8em; line-height: 2em;}
   .alert {border-radius: 0;}
   .alert {margin-top: 0;}
+  .hero img {oject-fit: cover; height: 300px;}
 }
 
 button {padding: 10px 30px; border: none; background: #1f343f; border-radius: 10px; font-size: 0.7em; margin-top:10px; color:white;}
